--- a/server/package.json
+++ b/server/package.json
@@ -13,7 +13,9 @@
     "express": "^4.18.2",
     "http": "^0.0.1-security",
     "mongoose": "^7.4.2",
-    "nodemon": "^3.0.1",
     "save-dev": "^0.0.1-security"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
